--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-cookies": "^0.1.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "tesseract.js": "^2.1.4",
     "translate-google-api": "^1.0.4",
     "web-vitals": "^0.2.4"
   },
