--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 /build
 
 # misc
-.env
+
 .DS_Store
 .env.local
 .env.development.local
@@ -25,3 +25,5 @@ yarn-debug.log*
 yarn-error.log*
 
 src/utils/env.js
+
+/.env
